fix: content illustration gaps

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -45,7 +45,7 @@
       margin-top: -53px;
     }
     @include b-d(md) {
-      margin-top: -78px;
+      margin-top: -23px;
     }
     :global(.lead) {
       max-width: 490px;
