--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -34,6 +34,9 @@
     @include b-d(lg) {
       margin-top: -36px;
     }
+    @include b-d(md) {
+      margin-top: 22px;
+    }
     p {
       margin-bottom: 43px;
       @include b-up(xl) {
